# 3DS-vmix-obs-control

./: CMakeLists.txt  Makefile  lv_conf.h
buildscripts/: cia.sh  citra.sh  fbi.sh  gen_banner.sh  gen_icon.sh
debugtools/: echo.py
source/: lv_ex_conf.h  lv_test_theme_2.c  lv_test_theme_2.h  main.cpp  main.h  vshader.shbin  vshader_shbin.h
source/graphics/: fnt.c  initdisplays.cpp  initdisplays.h  setcontent.cpp  setcontent.h
source/logger/: Logger.cpp  Logger.h
